<resources>
    <string name="app_name">SporTeam</string>
    <string name="in_progress">Se încarcă</string>
    <string name="action_sign_in_short">Înregistrare</string>
    <string name="email">Email</string>
    <string name="minimum_password">Parola prea scurta. Introduceti minim 6 caractere!</string>
    <string name="auth_failed">Autentificare eșuată! Verificați încă o dată numele de utilizator sau
    adresa de email, sau creeați-vă un cont nou!</string>
    <string name="change_email">Modifică Email</string>
    <string name="change_password">Modifică Parolă</string>
    <string name="send_password_reset_email">Trimite email pentru resetarea parolei</string>
    <string name="new_pass">Parola noua</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Înregistrează</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Parolă</string>
    <string name="hint_name">Nume complet</string>
    <string name="btn_login">Autentifică</string>
    <string name="btn_link_to_register">Creează cont nou</string>
    <string name="btn_link_to_login">Autentificare</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Ai uitat parola?</string>
    <string name="btn_reset_password">Resetare Parolă</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">Email nou</string>
    <string name="btn_change">Modifică</string>
    <string name="btn_send">Trimite</string>
    <string name="btn_remove">Șterge</string>
    <string name="prompt_password">Prompt Password</string>
    <string name="btn_sign_out">Ieși din cont</string>
    <string name="lbl_forgot_password">Ai uitat parola?</string>
    <string name="forgot_password_msg">Inroduceți email-ul pentru a primi instrucțiuni de resetarea a parolei.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notification">Notificare</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Galerie</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Unelte</string>
    <string name="menu_share">Distribuie</string>
    <string name="menu_send">Trimite</string>
    <string name="home_page_title">Home</string>
    <string name="login_page_title">Login</string>
    <string name="register_page_title">Înregistrare</string>
    <string name="reset_password_page_title">Resetare parolă</string>
    <string name="events_page_title">Evenimente</string>
    <string name="new_event_page_title">Eveniment nou</string>
    <string name="location_book_page_title">Închiriază locație</string>
    <string name="location_details_page_title">Detalii locație</string>
    <string name="notification_page_title">Notificări</string>
    <string name="equipment_page_title">Echipamente</string>
    <string name="my_account_page_title">Contul meu</string>
    <string name="conversation_title_page">Conversații</string>

    <string name="registerName">Nume:<font color='#FF0000'>*</font></string>
    <string name="registerUsername">Nume utilizator:<font color='#FF0000'>*</font></string>
    <string name="registerEmail">Email:<font color='#FF0000'>*</font></string>
    <string name="registerPassword">Parolă:<font color='#FF0000'>*</font></string>
    <string name="registerPasswordRepeat">Confirmare parolă:<font color='#FF0000'>*</font></string>
    <string name="registerSex">Sex:</string>
    <string name="registerSports">Sporturi preferate:</string>
    <string name="register_continue">Continuă</string>
    <string name="register_finish">Finalizare Profil</string>
    <string name="choose_sports">Alege sporturi</string>
    <string name="registerBarriers">Bariere fizice sau psihice:</string>
    <string name="registerInformations">Informații suplimentare:</string>
    <string name="sex_masculine">Masculin</string>
    <string name="sex_feminine">Feminin</string>
    <string name="registerAge">Vârsta:</string>
    <string name="sporteam">SporTeam</string>
    <string name="sex_choice">Sexul:</string>
    <string name="loadProfilePicture">Încarcă imaginea ta de profil:</string>
    <string name="fillFields">Eveniment nou</string>
    <string name="eventSport">Sport:</string>
    <string name="eventData">Data:</string>
    <string name="chooseSportDefault">Fotbal</string>
    <string name="eventTime">Ora:</string>
    <string name="eventLocation">Locația:</string>
    <string name="eventMinimumPersonNumber">Număr minim de persoane:</string>
    <string name="eventMaximumPersonNumber">Număr maxim de persoane:</string>
    <string name="eventPaymentMethod">Plata:</string>
    <string name="cardPaymentMethod">Plată cu cardul</string>
    <string name="cashPaymentMethod">Plată prin cash</string>
    <string name="eventType">Tip eveniment:</string>
    <string name="publicEvent">Public</string>
    <string name="privateEvent">Privat</string>
    <string name="distributeEvent">Distribuie eveniment</string>
    <string name="pay">Plătește</string>
    <string name="introduceAccountInfo">Introduceți datele contului:</string>
    <string name="holderName">Nume titular:</string>
    <string name="accountNumber">Numărul contului:</string>
    <string name="cvv">CVV:</string>
    <string name="cardExpirationDate">Data expirării:</string>
    <string name="confirm">Confirmă</string>
    <string name="createNewEvent">Creează eveniment nou</string>
    <string name="joinEvent">Alăturare</string>
    <string name="eventPrice">Preț (lei):</string>
    <string name="joinEventText">Apasă pe eveniment pentru alăturare</string>

    <string name="title_location_equipment">Locații/Echipamente</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Contul meu</string>
    <string name="saveProfile">Salvează profil</string>
</resources>
