<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterSecondPageActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sporteam"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex_choice"
            android:textColor="@color/white"/>

        <RadioGroup
            android:id="@+id/radiogroup_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/radio_masculine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_masculine"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_feminine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_feminine" />

        </RadioGroup>

        <EditText
            android:id="@+id/registerAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:hint="@string/registerAge"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:autofillHints="" />

        <TextView
            android:id="@+id/selectedSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/selectSports"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_sports"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/continueRegisterTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/register_continue"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/finishRegisterTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/register_finish"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
