<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="-200dp">

            <TextView
                android:id="@+id/sportTeamProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sporteam"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="25sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/viewProfileImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_below="@+id/sportTeamProfile"
                android:layout_marginStart="110dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/profile_picture" />

            <TextView
                android:id="@+id/viewProfileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewProfileImage"
                android:layout_marginTop="42dp"
                android:text="@string/registerUsername"/>

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/viewProfileUsername"
                android:padding="10dip"
                android:layout_marginTop="30dp"
                android:layout_below="@id/viewProfileImage"
                android:layout_marginEnd="-272dp"
                android:inputType="none"
                android:clickable="false"
                android:focusable="false" />

            <TextView
                android:id="@+id/viewProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewProfileUsername"
                android:layout_marginTop="42dp"
                android:text="@string/registerName" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/viewProfileName"
                android:padding="10dip"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/viewProfileUsername"
                android:layout_marginEnd="-272dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/viewProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewProfileName"
                android:layout_marginTop="42dp"
                android:text="@string/registerEmail" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/viewProfileEmail"
                android:padding="10dip"
                android:layout_marginTop="30dp"
                android:layout_below="@id/viewProfileName"
                android:layout_marginEnd="-272dp"
                android:inputType="none"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/viewProfileSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewProfileEmail"
                android:layout_marginTop="42dp"
                android:text="@string/registerSex"/>

            <RadioGroup
                android:id="@+id/editSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/viewProfileEmail"
                android:layout_toEndOf="@id/viewProfileSex">

                <RadioButton
                    android:id="@+id/editSexM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_masculine"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/editSexF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_feminine" />

            </RadioGroup>

            <TextView
                android:id="@+id/viewProfileAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewProfileSex"
                android:layout_marginTop="42dp"
                android:text="@string/registerAge"/>

            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/viewProfileAge"
                android:padding="10dip"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/viewProfileSex"
                android:layout_marginEnd="-272dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/viewProfileSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewProfileAge"
                android:layout_marginTop="50dp"
                android:text="@string/registerSports" />

            <Button
                android:id="@+id/editSports"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@+id/viewProfileSports"
                android:layout_below="@+id/viewProfileAge"
                android:layout_marginEnd="20dp"
                android:text="@string/choose_sports"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/viewProfileBarriers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewProfileSports"
                android:layout_marginTop="42dp"
                android:text="@string/registerBarriers" />

            <EditText
                android:id="@+id/editBarriers"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/viewProfileSports"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/viewProfileBarriers"
                android:padding="10dip"
                android:inputType="text"/>

            <TextView
                android:id="@+id/viewProfileInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewProfileBarriers"
                android:layout_marginTop="42dp"
                android:text="@string/registerInformations" />

            <EditText
                android:id="@+id/editInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/viewProfileInformation"
                android:padding="10dip"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/viewProfileBarriers"
                android:layout_marginEnd="-272dp"
                android:inputType="text" />

            <Button
                android:id="@+id/saveProfileButton"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewProfileInformation"
                android:layout_marginTop="79dp"
                android:layout_centerHorizontal="true"
                android:text="@string/saveProfile"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>