<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterSecondPageActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:text="SporTeam"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/barriersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/registerBarriers" />

        <EditText
            android:id="@+id/registerBarriers"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:inputType="text"
            android:textColorHint="@android:color/white" />

        <TextView
            android:id="@+id/informationsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/registerInformations" />

        <EditText
            android:id="@+id/registerInformations"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="text" />

        <Button
            android:id="@+id/continueRegisterThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/register_continue"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/finishRegisterThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/register_finish"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
